--- a/.classpath
+++ b/.classpath
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sorianom/OneDrive - Wentworth Institute of Technology/Documents/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx-swt.jar"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.controls.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.base.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.fxml.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.media.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.swing.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.web.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx-swt.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
