--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jxl-2.6.jar/jxl-2.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
