--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.base.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.controls.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.fxml.jar"/>
@@ -9,11 +14,10 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jxl-2.6.jar/jxl-2.6.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/ExcelJars/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/ExcelJars/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/ExcelJars/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/ExcelJars/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/ExcelJars/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
