--- a/.classpath
+++ b/.classpath
@@ -6,14 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jxl-2.6.jar/jxl-2.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
+	<classpathentry kind="lib" path="Jars/jxl-2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
